--- a/BuildThatModel.ipynb
+++ b/BuildThatModel.ipynb
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,10 +442,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OneSlackSSVM Score:  0.5566666666666666\n",
+      "FrankWolfeSSVM Score:  0.4046666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "X_train = X_train_edge_features[:300]\n",
+    "X_heroes = X_no_features_df[:300]\n",
+    "Y_train = np.array( Y[:300] )\n",
+    "\n",
+    "Y_pred = ssvm.predict(X_train)\n",
+    "test_score = accuracy_score(np.hstack(Y_train), np.hstack(Y_pred))\n",
+    "\n",
+    "Y_pred_FW = FWssvm.predict(X_train)\n",
+    "test_score_FW = accuracy_score(np.hstack(Y_train), np.hstack(Y_pred_FW))\n",
+    "print(\"OneSlackSSVM Score: \", test_score)\n",
+    "print(\"FrankWolfeSSVM Score: \", test_score_FW)"
+   ]
   },
   {
    "cell_type": "code",
